Use express: Routing, Redirect and 404

--- a/views/about.html
+++ b/views/about.html
@@ -6,6 +6,13 @@
     <title>Nodejs Course | About Us</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/blogs">Blogs</a></li>
+        </ul>
+    </nav>
     <h1>About Us</h1>
     <p>Welcome to the about us page</p>
 </body>
