--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,13 @@
     <title>Nodejs Course | Home</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/blogs">Blogs</a></li>
+        </ul>
+    </nav>
     <h1>Home</h1>
     <p>Welcome to the home page</p>
 </body>
