--- a/views/blogs.html
+++ b/views/blogs.html
@@ -6,6 +6,13 @@
     <title>Nodejs Course | Blogs</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">about</a></li>
+            <li><a href="/blogs">Blogs</a></li>
+        </ul>
+    </nav>
     <h1>Our Blogs</h1>
     <p>Welcome to our blogs page</p>
 </body>
