View engines and middleware with Express

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,178 +2,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Node Blogs | <%= title %></title>
-    <style>
-        :root {
-            --brand:        orangered;
-            --black:        #000;
-            --black__trs:   rgba(0, 0, 0, .55);
-            --white:        #d1d1d1;
-        }
-
-        * {
-            padding: 0;
-            margin: 0;
-            box-sizing: border-box;
-            font-family: system-ui, sans-serif;
-        }
-        *::selection {
-            background: var(--black);
-            color: var(--brand);
-        }
-
-        body {
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            height: 100%;
-            min-height: 100vh;
-            padding-top: 1rem;
-
-            display: flex;
-            flex-direction: column;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: end;
-            padding: 0 .5rem;
-            padding-bottom: .25rem;
-            border-bottom: 1px solid var(--black__trs);
-
-            margin-bottom: 2rem;
-        }
-        nav .app-title a {
-            text-decoration: none;
-            color: var(--brand);
-        }
-        nav ul {
-            list-style: none;
-            display: flex;
-            align-items: center;
-            gap: 1.5rem;
-        }
-        nav ul li a {
-            color: var(--black);
-            text-decoration: none;
-            transition: .2s;
-        }
-        nav ul li a:is(:hover) {
-            color: var(--brand);
-        }
-
-        footer {
-            width: calc(100% - 1rem);
-            margin-inline: auto;
-            margin-bottom: .5rem;
-            margin-top: auto;
-            background: var(--black);
-            color: var(--white);
-            padding: 1rem;
-            text-align: center;
-            font-size: 20px;
-            border-radius: 10px;
-        }
-
-        .app-content {
-            padding: 0 .5rem;
-        }
-        .app-content h2 {
-            margin-top: 1rem;
-            margin-bottom: .5rem;
-        }
-
-        .not-found, .no-blogs {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            
-            background: var(--black__trs);
-            border-radius: 12px;
-            color: var(--white);
-            width: 96%;
-            max-width: 400px;
-            margin: 0 auto;
-            margin-top: 5rem;
-            padding: 1.5rem;
-        }
-
-        .about p {
-            margin-bottom: 1rem;
-            font-size: 17px;
-        }
-
-        .blogs .blogs-container {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-gap: 1rem;
-        }
-        .blogs .blog {
-            background: var(--black__trs);
-            border-top-right-radius: 6px;
-            border-bottom-right-radius: 6px;
-            padding: .5rem;
-            border-left: .45rem solid var(--brand);
-            cursor: pointer;
-        }
-        .blogs .blog h3 {
-            font-size: 20px;
-            margin: 0;
-            margin-bottom: .25rem;
-        }
-        .blogs .blog p {
-            color: var(--white);
-        }
-
-        .new form {
-            width: 100%;
-            max-width: 600px;
-
-            display: flex;
-            flex-direction: column;
-            gap: .75rem;
-        }
-        .new form .input-group {
-            display: flex;
-            flex-direction: column;
-            gap: .5rem;
-        }
-        .new form .input-group:has(:is(input, textarea):focus) label {
-            color: var(--brand);
-        }
-        .new form .input-group label {
-            font-size: 18px;
-            font-weight: 600;
-            transition: .1s;
-        }
-        .new form .input-group :is(input, textarea) {
-            border: 1px solid var(--black__trs);
-            outline: none;
-            padding: .5rem;
-            border-radius: 4px;
-            transition: .2s;
-        }
-        .new form button {
-            background: transparent;
-            color: var(--black);
-            border: 1.5px solid currentColor;
-            font-size: 20px;
-            font-weight: 600;
-            outline: none;
-            width: max-content;
-            padding: .5rem 1.5rem;
-            border-radius: 12px;
-            cursor: pointer;
-            transition: .2s;
-        }
-        .new form button:hover {
-            color: var(--brand);
-        }
-
-        @media screen and (width <= 700px) {
-            .blogs .blogs-container {
-                grid-template-columns: 1fr;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/styles.css">
+    <link rel="shortcut icon" href="/blogger.png" type="image/x-icon">
 </head>
