--- a/public/styles.css
+++ b/public/styles.css
@@ -112,6 +112,7 @@ footer {
     padding: .5rem;
     border-left: .45rem solid var(--brand);
     cursor: pointer;
+    height: 100%;
 }
 .blogs .blog h3 {
     font-size: 20px;
@@ -173,13 +174,14 @@ footer {
     flex-direction: column;
     gap: 1rem;
     margin: 0 .5rem;
+    margin-bottom: 2rem;
 }
 .single-blog h1 {
     background: var(--brand__trs);
-    width: max-content;
     padding: .5rem;
     border-bottom: .3rem solid var(--brand);
     border-radius: 12px;
+    max-width: max-content;
 }
 .single-blog .delete {
     padding: .5rem 1.5rem;
